--- a/Pizza_Project/Pizza_CSS/Pizza.css
+++ b/Pizza_Project/Pizza_CSS/Pizza.css
@@ -1,6 +1,7 @@
 
 body {
     background-color: rgb(192, 51, 51);
+   
 }
 
 h1 {
@@ -25,18 +26,24 @@ div {
 }
 
 #frmMenu {
-    width: 400px;
+    width: 600px;
     height: 200px;
 }
 
 #totalPrice {
     width: 200px;
     height: 190px;
-    margin: 0 auto;
+    margin: 20px auto;
     float: right;
 }
 
 .left {
+    width: 200px;
+    height: 200px;
+    float: left;
+}
+
+.center {
     width: 200px;
     height: 200px;
     float: left;
@@ -50,7 +57,7 @@ div {
 
 #showText {
     width: 200px;
-    height: 190;
+    height: 190px;
     margin: 0px auto;
     float: left;
 }
@@ -65,4 +72,6 @@ div {
     margin: 10px 0px 0px 100px;
     width: 100px;
     height: 40px;
+    display: block;
+    margin: 25px auto;
 }
